# 42_webserv_playground

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  Readme.md
client_dir/: Client.cpp  Client.hpp
includes/: Client.hpp  Color.hpp  HttpRequest.hpp  HttpResponse.hpp  Server.hpp  View.hpp
playground/: get_cookie_pairs.cpp  getline.cpp
server_dir/: Server.cpp  Server.hpp
srcs/: HttpRequest.cpp  HttpResponse.cpp  Server.cpp  View.cpp
srcs/client_dir/: Client.cpp  main.cpp
srcs/server_dir/: Server.cpp  main.cpp
www/: form.html  index.css  index.html  login.html  userpage.html
